--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Oxyane séchoirs</title>
+<title>Explorateur données séchoirs</title>
 
 <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌽</text></svg>">
 
@@ -1237,137 +1237,165 @@ if(f.name.toLowerCase().endsWith('.csv')){
   }
 }
 
-// === Si on est dans "Consommation Gaz", calcul du delta sur colonnes 2 (heure HH:MM:SS) et 3 (kWh) ===
-if (ENABLE_GAZ_CALC && folderName.toLowerCase().includes("consommation gaz") && f.name.toLowerCase().endsWith(".csv")) {
+// === CONSOMMATION GAZ : calcul kWh + durée réelle ===
+if (
+  ENABLE_GAZ_CALC &&
+  folderName.toLowerCase().includes("consommation gaz") &&
+  f.name.toLowerCase().endsWith(".csv")
+) {
 
-html += `
-  <div class="gaz-group">
-    <button class="gaz-btn" disabled>⏳ Calcul...</button>
-    <button class="gaz-btn" disabled>⏳ Heures...</button>
-  </div>
-`;
-
+  html += `
+    <div class="gaz-group">
+      <button class="gaz-btn" disabled>⏳ kWh...</button>
+      <button class="gaz-btn" disabled>⏱ Temps...</button>
+      <button class="gaz-btn gaz-small" disabled>--</button>
+    </div>
+  `;
 
   (async () => {
     try {
-      const resGaz = await fetch(
+      const res = await fetch(
         `https://smes21540.netlify.app/.netlify/functions/drive?id=${f.id}&name=${encodeURIComponent(f.name)}&site=Smes_Acces`
       );
-      const textGaz = await resGaz.text();
-      const lines = textGaz.split(/\r?\n/).filter(l => l.trim() !== "");
 
-      let diffKwh = 0;
+      const text = await res.text();
+      const lines = text.split(/\r?\n/).filter(l => l.trim() !== "");
+
       let diffMinutes = 0;
+      let diffKwh = 0;
 
       if (lines.length > 2) {
+
         const firstCols = lines[1].split(",");
-        const lastCols = lines[lines.length - 1].split(",");
+        const lastCols  = lines[lines.length - 1].split(",");
 
-        // --- Colonne 2 : heure (format HH:MM:SS)
-        const hStart = firstCols[1]?.replace(/"/g, "").trim();
-        const hEnd = lastCols[1]?.replace(/"/g, "").trim();
+        const kFirst = parseFloat(firstCols[2].replace(/"/g,""));
+        const kLast  = parseFloat(lastCols[2].replace(/"/g,""));
 
-        function parseHeureToMinutes(h) {
-          const m = h.match(/^(\d{1,2}):(\d{2})(?::(\d{2}))?$/);
-          if (!m) return NaN;
-          const hh = parseInt(m[1]);
-          const mm = parseInt(m[2]);
-          const ss = parseInt(m[3] || "0");
-          return hh * 60 + mm + ss / 60;
+        if (isFinite(kFirst) && isFinite(kLast)) diffKwh = kLast - kFirst;
+
+        let active = 0;
+        for (let i = 1; i < lines.length; i++) {
+          const prev = lines[i - 1].split(",");
+          const curr = lines[i].split(",");
+
+          const kPrev = parseFloat(prev[2].replace(/"/g,""));
+          const kCurr = parseFloat(curr[2].replace(/"/g,""));
+
+          if (isFinite(kPrev) && isFinite(kCurr) && kCurr > kPrev) active++;
         }
-
-        const startMin = parseHeureToMinutes(hStart);
-        const endMin = parseHeureToMinutes(hEnd);
-
-        if (isFinite(startMin) && isFinite(endMin)) {
-          diffMinutes = endMin - startMin;
-          if (diffMinutes < 0) diffMinutes += 24 * 60; // passage minuit
-        }
-
-        // --- Colonne 3 : compteur kWh ---
-        const vCfirst = parseFloat(firstCols[2]?.replace(/"/g, "").trim());
-        const vClast = parseFloat(lastCols[2]?.replace(/"/g, "").trim());
-        if (isFinite(vCfirst) && isFinite(vClast)) diffKwh = vClast - vCfirst;
+        diffMinutes = active;
       }
 
-      if (!isFinite(diffKwh) || diffKwh < 0) diffKwh = 0;
-      if (!isFinite(diffMinutes) || diffMinutes < 0) diffMinutes = 0;
-
-      // Conversion minutes → HH:MM
-      const hours = Math.floor(diffMinutes / 60);
-      const minutes = Math.floor(diffMinutes % 60);
-      const hh = String(hours).padStart(2, "0");
-      const mm = String(minutes).padStart(2, "0");
-      const dureeFormatee = `${hh}:${mm}`;
-
-      const roundedKwh = diffKwh.toFixed(0);
+      const H = String(Math.floor(diffMinutes / 60)).padStart(2,"0");
+      const M = String(diffMinutes % 60).padStart(2,"0");
+      const dureeFormatee = `${H}:${M}`;
 
       const btns = tdAction.querySelectorAll(".gaz-btn");
-      const btnKwh = btns[0];
+      const btnKwh    = btns[0];
       const btnHeures = btns[1];
+      const btnAvg    = btns[2];
 
-if (diffKwh > 400000) {
-  const btns = tdAction.querySelectorAll(".gaz-btn");
-  const btnKwh = btns[0];
-  if (btnKwh) {
-    btnKwh.textContent = `⚠️ ${diffKwh.toFixed(0)} kWh (valeur anormale)`;
-    btnKwh.style.background = "linear-gradient(180deg, #ffccbc, #d32f2f)";
-    btnKwh.style.color = "#fff";
-    btnKwh.style.transform = "scale(1)";
-  }
-  return; // 🔴 on arrête ici, pas d'animation ni de couleur normale
-}
+      /* ===========================
+         🎨 FORMATAGE, COULEURS & AFFICHAGE
+         =========================== */
 
-      
-// ⚡ KWH (couleur douce selon consommation)
-if (btnKwh) {
-  btnKwh.textContent = `🔥 ${roundedKwh} kWh`;
-  btnKwh.style.transition = "background 0.8s ease-out, color 0.8s ease-out";
+      const rounded = Math.round(diffKwh);
 
-  // Limiter la valeur pour éviter les extrêmes
-  const v = Math.min(Math.max(diffKwh, 0), 200000);
-
-  let bg = "";
-  let textColor = "#1b5e20"; // vert foncé par défaut
-
-  if (v <= 10000) {
-    // vert clair → jaune
-    const ratio = v / 10000;
-    const g = Math.round(230 - 60 * ratio);
-    const r = Math.round(200 + 55 * ratio);
-    bg = `linear-gradient(180deg, rgb(${r},${g},100), rgb(${r + 20},${g + 20},120))`;
-    textColor = "#2e7d32";
-  } else {
-    // jaune → rouge
-    const ratio = (v - 10000) / 190000;
-    const r = Math.round(255);
-    const g = Math.round(235 - 155 * ratio);
-    bg = `linear-gradient(180deg, rgb(${r},${g},80), rgb(${r - 20},${g - 30},60))`;
-    textColor = "#3e2723";
-  }
-
-  btnKwh.style.background = bg;
-  btnKwh.style.color = textColor;
-}
-
-
-
-      // ⏱ HEURES (format HH:MM)
-      if (btnHeures) {
+      // 🔥 ERREUR si négatif
+      if (rounded < 0) {
+        btnKwh.textContent = "ERREUR";
+        btnKwh.style.background = "linear-gradient(180deg, #ffccbc, #d32f2f)";
+        btnKwh.style.color = "#fff";
         btnHeures.textContent = `⏱ ${dureeFormatee}`;
-        btnHeures.style.background = "linear-gradient(180deg, #bbdefb, #64b5f6)";
-        btnHeures.style.color = "#0d47a1";
-        btnHeures.style.transform = "scale(0.95)";
+        btnAvg.textContent = "ERREUR";
+        return;
       }
 
-    } catch (e) {
-      console.warn("Erreur calcul Consommation Gaz :", f.name, e);
-      const btns = tdAction.querySelectorAll(".gaz-btn");
-      if (btns[0]) btns[0].textContent = "⚡ 0 kWh";
-      if (btns[1]) btns[1].textContent = "⏱ 00:00";
+      // 🔥 ERREUR si > 400000
+      if (rounded > 400000) {
+        btnKwh.textContent = "ERREUR";
+        btnKwh.style.background = "linear-gradient(180deg, #ffccbc, #d32f2f)";
+        btnKwh.style.color = "#fff";
+        btnHeures.textContent = `⏱ ${dureeFormatee}`;
+        btnAvg.textContent = "ERREUR";
+        return;
+      }
+
+      // 🫥 Masqué si 0
+      if (rounded === 0) {
+        btnKwh.style.display = "none";
+        btnHeures.style.display = "none";
+        btnAvg.style.display = "none";
+        return;
+      }
+
+      // --- Valeur normale ---
+      const padded = String(rounded).padStart(7, " ");
+
+      let v = Math.min(Math.max(rounded, 0), 200000);
+      let bg = "";
+      let textColor = "#1b5e20";
+
+      if (v <= 10000) {
+        const ratio = v / 10000;
+        const g = Math.round(230 - 60 * ratio);
+        const r = Math.round(200 + 55 * ratio);
+        bg = `linear-gradient(180deg, rgb(${r},${g},100), rgb(${r+20},${g+20},120))`;
+        textColor = "#2e7d32";
+      } else {
+        const ratio = (v - 10000) / 190000;
+        const r = 255;
+        const g = Math.round(235 - 155 * ratio);
+        bg = `linear-gradient(180deg, rgb(${r},${g},80), rgb(${r-20},${g-30},60))`;
+        textColor = "#3e2723";
+      }
+
+      btnKwh.textContent = `${padded} kWh`;
+      btnKwh.style.background = bg;
+      btnKwh.style.color = textColor;
+      btnKwh.style.minWidth = "120px";
+
+      btnHeures.textContent = `⏱ ${dureeFormatee}`;
+      btnHeures.style.background = "linear-gradient(180deg, #bbdefb, #64b5f6)";
+      btnHeures.style.color = "#0d47a1";
+      btnHeures.style.minWidth = "120px";
+
+      /* ===========================
+         📊 Conso moyenne / heure
+         =========================== */
+
+      const hours = diffMinutes / 60;
+
+      if (hours === 0) {
+        btnAvg.style.display = "none";
+        return;
+      }
+
+      const avg = rounded / hours;
+
+      // 🚨 ERREUR si < 1000 kWh/h
+      if (avg < 1000) {
+        btnAvg.textContent = "ERREUR";
+        btnAvg.style.background = "#ff8a80";
+        btnAvg.style.color = "#b71c1c";
+        return;
+      }
+
+      btnAvg.textContent = `${avg.toFixed(1)} kWh/h`;
+      btnAvg.style.background = "linear-gradient(180deg, #e1f5fe, #81d4fa)";
+      btnAvg.style.color = "#01579b";
+      btnAvg.style.minWidth = "90px";
+      btnAvg.style.fontSize = "12px";
+
+    } catch (err) {
+      console.warn("Erreur GAZ:", err);
     }
   })();
 }
+
+
+
 
 
 
@@ -2042,6 +2070,16 @@ if (last) {
 </script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
 
 
 
