--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Séchoirs Oxyane</title>
+<title>Explorateur données séchoirs</title>
 
 <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌽</text></svg>">
 
@@ -512,6 +512,8 @@ tbody tr:hover .action-btn{opacity:1;visibility:visible;}
     <button onclick="applyFilter()">Filtrer</button>
     <button onclick="clearFilter()">Tout afficher</button>
     <button id="downloadFolderBtn">Télécharger le dossier</button>
+    <button id="exportCsvBtn" style="display:none;">Export CSV</button>
+
   </div>
 
   <div id="tableWrapper">
@@ -1007,6 +1009,15 @@ document.querySelector(".controls").style.display = "flex";
   downloadBtn.style.display="inline-block";
 
 downloadBtn.style.display="inline-block";
+
+  // Bouton Export CSV visible uniquement dans Consommation Gaz
+const exportBtn = document.getElementById("exportCsvBtn");
+if (folderName.toLowerCase().includes("consommation gaz")) {
+    exportBtn.style.display = "inline-block";
+} else {
+    exportBtn.style.display = "none";
+}
+
 
 // 🔍 Prépare la liste des dates ayant un JSON "actif"
 const jsonDates = new Set();
@@ -2055,6 +2066,69 @@ function recolorHotDays(instance) {
 }
 
 
+/* ----------- Export CSV (Gaz) ----------- */
+document.getElementById("exportCsvBtn").addEventListener("click", function () {
+
+    const rows = Array.from(document.querySelectorAll("#csvTable tbody tr"))
+        .filter(r => r.style.display !== "none");
+
+    if (rows.length === 0) {
+        alert("Aucune ligne visible à exporter.");
+        return;
+    }
+
+    // En-tête
+    let csv = "Date,ConsokWh,ConsoM3,Duree,DureeMinutes,Moyenne(kWh/h),Tonnage\n";
+
+    rows.forEach(row => {
+
+        // --- DATE ---
+        let date = row.querySelector("td:nth-child(1)")?.textContent.split(" ")[0] || "";
+        if (!date) date = "0";
+
+        const btns = row.querySelectorAll(".gaz-group .gaz-btn");
+        if (btns.length !== 4) return;
+
+        // --- KWH ---
+        let kwh = btns[0].textContent.replace(/[^\d.-]/g, "").trim();
+        if (kwh === "" || isNaN(kwh)) kwh = "0";
+
+        // --- M3 ---
+        let m3 = btns[1].textContent.replace(/[^\d.-]/g, "").trim();
+        if (m3 === "" || isNaN(m3)) m3 = "0";
+
+        // --- DUREE (HH:MM) ---
+        let duree = btns[2].textContent.replace(/[^0-9:]/g, "").trim();
+        if (!duree.includes(":")) duree = "0";
+
+        // --- CALCUL DUREE EN MINUTES ---
+        let totalMinutes = 0;
+        if (duree !== "0") {
+            const parts = duree.split(":");
+            const h = parseInt(parts[0], 10);
+            const m = parseInt(parts[1], 10);
+            totalMinutes = (isNaN(h) || isNaN(m)) ? 0 : (h * 60 + m);
+        }
+
+        // --- MOYENNE ---
+        let avg = btns[3].textContent.replace(/[^\d.-]/g, "").trim();
+        if (avg === "" || isNaN(avg)) avg = "0";
+
+        // --- TONNAGE (à remplir plus tard) ---
+        let tonnage = "";
+
+        csv += `${date},${kwh},${m3},${duree},${totalMinutes},${avg},${tonnage}\n`;
+    });
+
+    // Téléchargement
+    const blob = new Blob([csv], { type: "text/csv;charset=utf-8;" });
+    const link = document.createElement("a");
+    link.href = URL.createObjectURL(blob);
+    link.download = "export_gaz.csv";
+    link.click();
+});
+
+
 
 
 
@@ -2088,6 +2162,11 @@ if (last) {
 </script>
 </body>
 </html>
+
+
+
+
+
 
 
 
