--- a/index.html
+++ b/index.html
@@ -1328,10 +1328,13 @@ for (let i = 1; i < lines.length; i++) {
   const vInf = idxInf !== undefined ? parseFloat(cols[idxInf]) : NaN;
   const vSup = idxSup !== undefined ? parseFloat(cols[idxSup]) : NaN;
 
-  if ((isFinite(vInf) && vInf > FLAME_THRESHOLD) ||
-      (isFinite(vSup) && vSup > FLAME_THRESHOLD)) {
+if (
+    (isFinite(vInf) && vInf > 40 && vInf < 300) ||
+    (isFinite(vSup) && vSup > 40 && vSup < 300)
+) {
     countFlame++;
-  }
+}
+
 }
 
 
@@ -2030,10 +2033,13 @@ if (!tracatemp) {
           const vInf = idxInf !== undefined ? parseFloat(cols[idxInf]) : NaN;
           const vSup = idxSup !== undefined ? parseFloat(cols[idxSup]) : NaN;
 
-          if ((isFinite(vInf) && vInf > FLAME_THRESHOLD) ||
-              (isFinite(vSup) && vSup > FLAME_THRESHOLD)) {
-            countFlame++;
-          }
+if (
+    (isFinite(vInf) && vInf > 40 && vInf < 300) ||
+    (isFinite(vSup) && vSup > 40 && vSup < 300)
+) {
+    countFlame++;
+}
+
         }
 
         if (countFlame >= 1) {
@@ -2127,7 +2133,11 @@ const res = await fetch(url);
     const vInf = idxInf !== undefined ? parseFloat(cols[idxInf]) : NaN;
 
     // 🔥 seuil
-    if ((vSup && vSup > FLAME_THRESHOLD) || (vInf && vInf > FLAME_THRESHOLD)) {
+    if (
+    (isFinite(vSup) && vSup > 40 && vSup < 300) ||
+    (isFinite(vInf) && vInf > 40 && vInf < 300)
+)
+ {
       markFolderWithFlame(parentLi);
     }
 
